--- a/framework/source/resource/qx/mobile/scss/basic/_radiobutton.scss
+++ b/framework/source/resource/qx/mobile/scss/basic/_radiobutton.scss
@@ -38,3 +38,9 @@
 .radio.checked:after {
   opacity: 1;
 }
+
+// Triggering CSS anti-aliasing on Android devices [BUG #7847]
+.root.android .radio:after {
+  content:".";
+  color:rgba(0,0,0,0);
+}
